--- a/templates/program.html
+++ b/templates/program.html
@@ -296,6 +296,7 @@
             container.appendChild( renderer.domElement );
 
             onWindowResize();
+            Webapp.register_popovers();
 
             window.addEventListener( 'resize', onWindowResize, false );
 
