--- a/templates/_include/_render_pass.html
+++ b/templates/_include/_render_pass.html
@@ -2,6 +2,8 @@
 <div class="well" style="background-color: #fff;" id="renderpass_{{ renderPass.get_id }}">
     <a data-toggle="collapse" href="#shader_{{ renderPass.get_shader.get_id }}_wrapper"><h4>{{ renderPass.get_shader.get_name }}</h4></a>
     <div class="form-group collapse ace-wrapper" id="shader_{{ renderPass.get_shader.get_id }}_wrapper">
+        <button class="btn btn-default" data-toggle="popover" data-placement="right" data-html="true" data-content="// uniform vec3 bla<br>// uniform vec3 bla">{% _"Available Variables" %}</button>
+        <br>
         <label for="id_name_{{ renderPass.get_id }}">Name</label>
         <input id="id_name_{{ renderPass.get_id }}" type="text" class="form-control" name="name" value="{{ renderPass.get_shader.get_name }}" style="background-color: rgb(39, 40, 34); color: #f7f7f7;">
         <label for="id_texture_name_{{ renderPass.get_id }}">Texturename</label>
