--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -140,6 +140,11 @@
                 <ul>
                     <li><a href="http://souch.iekadou.com{% url 'program' '13' %}" target="_blank">Renderpass oder Postprocess</a></li>
                 </ul>
+            <li>Aquarell
+                <ul>
+                    <li><a href="http://souch.iekadou.com{% url 'program' '22' %}" target="_blank">Aquarell</a></li>
+                </ul>
+            </li>
             <li>Fresnel
                 <ul>
                     <li><a href="http://souch.iekadou.com{% url 'program' '18' %}" target="_blank">Fresnel Rim</a></li>
@@ -150,10 +155,9 @@
                     <li><a href="http://souch.iekadou.com{% url 'program' '32' %}" target="_blank">Sobel</a></li>
                 </ul>
             </li>
-            <li>Artistic
+            <li>Sketch
                 <ul>
-                    <li><a href="http://souch.iekadou.com{% url 'program' '36' %}" target="_blank">Sketh Shading</a></li>
-                    <li><a href="http://souch.iekadou.com{% url 'program' '22' %}" target="_blank">Aquarell</a></li>
+                    <li><a href="http://souch.iekadou.com{% url 'program' '36' %}" target="_blank">Sketch</a></li>
                 </ul>
             </li>
         </ul>
