adding frei Chen

--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -119,6 +119,7 @@
             </li>
             <li>Postprocessing
                 <ul>
+                    <li><a href="http://souch.iekadou.com{% url 'program' '35' %}" target="_blank">Frei Chen</a></li>
                     <li><a href="http://souch.iekadou.com{% url 'program' '26' %}" target="_blank">Texturierte Outlines und Fülltextur</a></li>
                 </ul>
             </li>
